@@ -57,7 +57,6 @@ GTK_REQUIRED=2.4.0
 LIBGNOMECANVAS_REQUIRED=2.6.0
 LIBGNOMEUI_REQUIRED=2.6.0
 LIBGLADE_REQUIRED=2.4.0
-LIBBONOBOUI_REQUIRED=2.6.0
 LIBGNOMEPRINTUI_REQUIRED=2.6.0
 GNOME_VFS_REQUIRED=2.6.0
 GCONF_REQUIRED=2.6.0
@@ -71,7 +70,6 @@ AC_SUBST(GTK_REQUIRED)
 AC_SUBST(LIBGNOMECANVAS_REQUIRED)
 AC_SUBST(LIBGNOMEUI_REQUIRED)
 AC_SUBST(LIBGLADE_REQUIRED)
-AC_SUBST(LIBBONOBOUI_REQUIRED)
 AC_SUBST(LIBGNOMEPRINTUI_REQUIRED)
 AC_SUBST(GNOME_VFS_REQUIRED)
 AC_SUBST(GCONF_REQUIRED)
@@ -109,7 +107,6 @@ PKG_CHECK_MODULES(PLANNER,
 	libgnomecanvas-2.0 >= $LIBGNOMECANVAS_REQUIRED
 	libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED
 	libglade-2.0 >= $LIBGLADE_REQUIRED
-	libbonoboui-2.0 >= $LIBBONOBOUI_REQUIRED
 	libgnomeprintui-2.2 >= $LIBGNOMEPRINTUI_REQUIRED
 	gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED
 	gconf-2.0 >= $GCONF_REQUIRED
@@ -133,17 +130,6 @@ PKG_CHECK_MODULES(LIBPLANNER,
 AC_SUBST(LIBPLANNER_CFLAGS)
 AC_SUBST(LIBPLANNER_LIBS)
 dnl -----------------------------------------------------------
-
-
-dnl  ------------------
-dnl | libeggrecent    |---------------------------------------
-dnl  ------------------
-#PKG_CHECK_MODULES(LIBGNOMEUI, libgnomeui-2.0 >= 2.1.1,
-# GNOMEUI_UNSTABLE="-UUSE_STABLE_LIBGNOMEUI",
-# GNOMEUI_UNSTABLE="-DUSE_STABLE_LIBGNOMEUI")
-#AC_SUBST(GNOMEUI_UNSTABLE)
-dnl -----------------------------------------------------------
-
 
 
 dnl ================================
